Reconfig gulp for build

--- a/src/swig/layouts/base.html
+++ b/src/swig/layouts/base.html
@@ -1,18 +1,16 @@
-
-
-
+{% include '../vars/global.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+{% block head %}
   <!-- Meta Data -->
   <meta charset="utf-8">
   <title>Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="shortcut icon" href="./assets/img/favicon.ico?v4" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ assetDir }}/img/favicon.ico?v4" type="image/x-icon">
 
-  
+  {% block styles %}
   <!-- Main CSS -->
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700&amp;subset=latin' rel='stylesheet' type='text/css'>
   <!-- build:csslib ./assets/css/libs.css -->
@@ -26,45 +24,35 @@
   <link rel="stylesheet" href="./assets/css/animations.css" />
   <!-- endbuild -->
   <!--<![endif]-->
-  
+  {% endblock %}
 
   <!--[if lt IE 9]>
     <!-- build:iejs ./assets/js/ielibs.min.js -->
-    <script src="./vendors/html5shiv/dist/html5shiv.js"></script>
-    <script src="./vendors/respond/src/respond.js"></script>
+    <script src="{{ vendorDir }}/html5shiv/dist/html5shiv.js"></script>
+    <script src="{{ vendorDir }}/respond/src/respond.js"></script>
     <!-- endbuild -->
   <!--<![endif]-->
-
+{% endblock %}
 </head>
-<body class="home-page  ">
+<body class="{{ [page, bodyClass] | join(' ') }} ">
   <header role="mainheader" class="">
-  <div class="oe-header">
-</div>
-
-
+  {% include 'partials/header.html' %}
   </header>
 
-  <main class="">
-    
-<h1>INDEX PAGE</h1>
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque commodo nec turpis nec cursus. Sed vestibulum ligula arcu, sit amet pellentesque lorem bibendum vitae. Integer eget lectus nibh. Aliquam vulputate fermentum neque eu facilisis. Aenean faucibus urna erat, in dictum elit mollis et. Sed dictum pellentesque varius. Proin gravida accumsan mauris, eget vestibulum sapien cursus eget. Maecenas lobortis quam et dolor feugiat interdum. 
-
-
+  <main class="{{ [mainClass] | join(' ') }}">
+    {% block main %}
+    {% endblock %}
   </main>
 
   <footer>
-    <div class="oe-footer">
-
-</div>
-
+    {% include 'partials/footer.html' %}
   </footer>
 
   <!-- Javascript makes everything alive -->
-  
+  {% block scripts %}
     <!-- build:js ./js/libs.js -->
     <!-- endbuild -->
     <script src="./assets/js/main.js"></script>
-  
+  {% endblock %}
 </body>
 </html>
